RESULTS/AutoSpec/raw_results/out-4o-sv-comp/0011_0006/0011_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/0011_0006/0011_merged.c:34:3: error: unterminated comment
   34 |   /*@;
      |   ^
